@@ -81,6 +81,7 @@
 	* Added tx_solr_pi_results_ResultsCommand->setSearch()
 	* Added tx_solr_Query->getKeywordsCleaned()
 	* Added feature to search using the spell checker suggestions when no results were found for the original query
+	* Added option tx_solr.search.spellchecking.searchUsingSpellChekerSuggestion
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
